--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "clipboard-copy": "^4.0.1",
     "cytoscape": "^3.30.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
