config: enable gzip compression for nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,22 @@
 # Rate limiting zone definition
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+# Enable gzip compression
+gzip on;
+gzip_disable "msie6";
+gzip_comp_level 5;
+gzip_min_length 256;
+gzip_proxied any;
+gzip_vary on;
+gzip_types
+    application/javascript
+    application/json
+    application/xml
+    text/javascript
+    text/css
+    text/plain
+    text/xml;
+
 server {
     listen 80;                 # Listen on port 80 (HTTP)
     root /usr/share/nginx/html; # Base directory for static files (React build output)
