--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,32 @@ services:
     build: ./backend
     # restart the container on crashes or if the Docker daemon restarts
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
     ports:
       - "80:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     volumes:
       - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
       - nginx_logs:/var/log/nginx
     restart: unless-stopped
+    networks:
+      - app-network
 
 
 volumes:
   nginx_logs:
+
+networks:
+  app-network:
