--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,13 @@ services:
     build: ./frontend
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       backend:
         condition: service_healthy
     volumes:
       - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/ssl/marketmap.club:/etc/ssl/marketmap.club # Mount SSL certs
       - nginx_logs:/var/log/nginx
     restart: unless-stopped
     networks:
