--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,4 +23,5 @@ COPY --from=build-env /app/dist /usr/share/nginx/html
 # COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
