--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 # Rate limiting zone definition
-limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+# limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
 # Enable gzip compression
 gzip on;
@@ -19,6 +19,28 @@ gzip_types
 
 server {
     listen 80;                 # Listen on port 80 (HTTP)
+    server_name marketmap.club www.marketmap.club;
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;            # Listen on port 443 (HTTPS)
+    server_name marketmap.club www.marketmap.club;
+
+    # SSL certificate configuration
+    ssl_certificate     /etc/ssl/marketmap.club/domain.cert.pem;
+    ssl_certificate_key /etc/ssl/marketmap.club/private.key.pem;
+
+    # SSL optimization
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+
     root /usr/share/nginx/html; # Base directory for static files (React build output)
     index index.html;          # Default file to serve
 
@@ -52,8 +74,8 @@ server {
         # This works because our FastAPI routes include /api/ in their paths
 
         # Apply rate limiting: 10 requests/second with a burst of 20
-        limit_req zone=api_limit burst=20 nodelay;
-        limit_req_status 429; # Return 429 Too Many Requests instead of default 503
+        # limit_req zone=api_limit burst=20 nodelay;
+        # limit_req_status 429; # Return 429 Too Many Requests instead of default 503
 
         # Log rate-limited requests separately
         access_log /var/log/nginx/api_access.log main buffer=4k flush=5s;
