config: enable rate limiting

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 # Rate limiting zone definition
-# limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
 # Enable gzip compression
 gzip on;
@@ -60,6 +60,15 @@ server {
 
     # API request handling
     location /api/ {
+        # # Nginx level caching
+        # proxy_cache my_cache;
+        # proxy_cache_valid 200 1h;
+        # proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+        #
+        # # Client level caching
+        # expires 10m;
+        # add_header Cache-Control "public, max-age=600";
+        # add_header X-Cache-Status $upstream_cache_status;
 
         # IMPORTANT: This matches any URL beginning with /api/
         # Example: /api/graph, /api/booths, etc.
@@ -74,8 +83,8 @@ server {
         # This works because our FastAPI routes include /api/ in their paths
 
         # Apply rate limiting: 10 requests/second with a burst of 20
-        # limit_req zone=api_limit burst=20 nodelay;
-        # limit_req_status 429; # Return 429 Too Many Requests instead of default 503
+        limit_req zone=api_limit burst=20 nodelay;
+        limit_req_status 429; # Return 429 Too Many Requests instead of default 503
 
         # Log rate-limited requests separately
         access_log /var/log/nginx/api_access.log main buffer=4k flush=5s;
