--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,14 @@ services:
       timeout: 5s
       retries: 3
       start_period: 15s
+    volumes:
+      - analytics_logs:/root/marketmap/logs/
     networks:
       - app-network
 
   frontend:
     build: ./frontend
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
@@ -24,13 +27,12 @@ services:
       - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/ssl/marketmap.club:/etc/ssl/marketmap.club # Mount SSL certs
       - nginx_logs:/var/log/nginx
-    restart: unless-stopped
     networks:
       - app-network
 
-
 volumes:
   nginx_logs:
+  analytics_logs:
 
 networks:
   app-network:
