config(nginx, docker): setup certbot verification; create dev compose file

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,29 +9,38 @@ gzip_min_length 256;
 gzip_proxied any;
 gzip_vary on;
 gzip_types
-    application/javascript
-    application/json
-    application/xml
-    text/javascript
-    text/css
-    text/plain
-    text/xml;
+application/javascript
+application/json
+application/xml
+text/javascript
+text/css
+text/plain
+text/xml;
 
 server {
-    listen 80;                 # Listen on port 80 (HTTP)
+    listen 80; # Listen on port 80 (HTTP)
     server_name marketmap.club www.marketmap.club;
 
+    # Certbot needs HTTP access to verify you own the domain, this MUST be accessible on port 80 (before the HTTPS redirect)
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always; # Certbot tmp files here no caching
+    }
+
     # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
-    listen 443 ssl;            # Listen on port 443 (HTTPS)
+    listen 443 ssl; # Listen on port 443 (HTTPS)
     server_name marketmap.club www.marketmap.club;
 
-    # SSL certificate configuration
-    ssl_certificate     /etc/ssl/marketmap.club/domain.cert.pem;
-    ssl_certificate_key /etc/ssl/marketmap.club/private.key.pem;
+    # --- SSL Certificate Configuration ---
+    ssl_certificate /etc/letsencrypt/live/marketmap.club/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/marketmap.club/privkey.pem;
+    # These files are created by Certbot
 
     # SSL optimization
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -42,11 +51,18 @@ server {
     ssl_session_tickets off;
 
     root /usr/share/nginx/html; # Base directory for static files (React build output)
-    index index.html;          # Default file to serve
+    index index.html; # Default file to serve
 
     # Logging configuration
     access_log /var/log/nginx/access.log main buffer=16k flush=10s;
     error_log /var/log/nginx/error.log warn;
+
+
+    # Same as HTTP version - needed for renewals
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+    }
 
     # Frontend application routing
     location / {
@@ -56,7 +72,6 @@ server {
         # 2. Then try URI/ as a directory
         # 3. Finally fall back to /index.html (React takes over routing)
     }
-
 
     # API request handling
     location /api/ {
@@ -91,8 +106,8 @@ server {
         error_log /var/log/nginx/api_error.log warn;
 
         # Headers to properly identify the original client to the backend
-        proxy_set_header Host $host;               # Original host requested by client
-        proxy_set_header X-Real-IP $remote_addr;   # Client's actual IP
+        proxy_set_header Host $host; # Original host requested by client
+        proxy_set_header X-Real-IP $remote_addr; # Client's actual IP
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # Chain of proxies
         proxy_set_header X-Forwarded-Proto $scheme; # Original protocol (http/https)
 
