--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       backend:
         condition: service_healthy
     volumes:
-      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/ssl/marketmap.club:/etc/ssl/marketmap.club # Mount SSL certs
+      - /etc/letsencrypt:/etc/letsencrypt:ro # mount Certbot certificates (read-only)
+      - /var/www/certbot:/var/www/certbot:ro # for webroot challenge
       - nginx_logs:/var/log/nginx
     networks:
       - app-network
