--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,20 +18,18 @@ services:
     build: ./frontend
     restart: unless-stopped
     ports:
-      - "80:80"
+      - ${CADDY_PORT}:80
       - "443:443"
+      - "443:443/udp"
     depends_on:
       backend:
         condition: service_healthy
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro # mount Certbot certificates (read-only)
-      - /var/www/certbot:/var/www/certbot:ro # for webroot challenge
-      - nginx_logs:/var/log/nginx
+      - ./frontend/Caddyfile:/etc/caddy/Caddyfile:ro
     networks:
       - app-network
 
 volumes:
-  nginx_logs:
   analytics_logs:
 
 networks:
