--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,19 +18,20 @@ services:
     build: ./frontend
     restart: unless-stopped
     ports:
-      - ${CADDY_PORT}:80
+      - ${CADDY_PORT:-5173}:80
       - "443:443"
       - "443:443/udp"
     depends_on:
       backend:
         condition: service_healthy
     volumes:
-      - ./frontend/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
     networks:
       - app-network
 
 volumes:
   analytics_logs:
+  caddy_data:
 
 networks:
   app-network:
